# two_blast_wave

./: CMakeLists.txt  README.md
include/: derivatives.h  new_bc2.h  new_ic.h  nov_5.h  split_lf.h  split_lf_CPU.h
src/: boundary.cpp  dx_n.cpp  dx_p.cpp  dy_n.cpp  dy_p.cpp  initial.cpp  main_cuda.cpp  main_omp.cpp  nov_5.cpp  split_lf.cu  split_lf_CPU.cpp
